# isGDIp

./: CMakeLists.txt  gdi.cpp  gdi2.cpp  test.iss  testGDI.cpp
Release/: gdi-11042018.7z  test.iss
